Technical Base - 2 Create a basic game window

--- a/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth.vcxproj.filters
+++ b/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SFML Echoes of the Labyrinth.cpp">
+    <ClCompile Include="game.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
