--- a/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth.vcxproj
+++ b/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth.vcxproj
@@ -132,10 +132,12 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Labyrinth.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="Labyrinth.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="ResourceManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
