--- a/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth.vcxproj.filters
+++ b/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Labyrinth.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -33,6 +36,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="ResourceManager.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
