--- a/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth.vcxproj.filters
+++ b/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth/SFML Echoes of the Labyrinth.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="PlayerInput.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Collider.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Walls.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -45,6 +51,12 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="PlayerInput.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Collider.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Walls.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
